[tool.black]
line-length = 100
target_version = ['py310']
include = 'pykeg/.*\.pyi?$'
exclude = '''
(
  .*/migrations/.*
)
'''

[tool.poetry]
name = "kegbot"
version = "1.3.0b2"
description = "Kegbot Server"
authors = ["The Kegbot Project contributors"]
repository = "https://github.com/Kegbot/kegbot-server"
license = "MIT"
packages = [
    { include = "pykeg", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10.5"
celery = "*"
coloredlogs = "*"
dj-database-url = "*"
dj-email-url = "*"
django-bootstrap-pagination = "*"
django-crispy-forms = "*"
django-imagekit = "*"
django-redis = "*"
django-registration = "*"
gunicorn = "*"
httplib2 = "*"
isodate = "*"
oauthlib = "*"
pilkit = "*"
protobuf = "3.20.0"
python-gflags = "*"
pytz = "*"
redis = "*"
requests-oauthlib = "*"
requests = "*"
whitenoise = "*"
Django = "3.2"
Pillow = "*"
PyYAML = "*"
mysqlclient = "*"
addict = "*"
gevent = "*"
psycopg2 = "*"
future = "^0.18.2"
freezegun = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pytest = "*"
pytest-django = "*"
requests-mock = "*"
sphinx-issues = "*"
sphinx = "*"
vcrpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
